Fixes flickering on animation

--- a/interface/contents/locales/Locales.scss
+++ b/interface/contents/locales/Locales.scss
@@ -37,9 +37,10 @@
   color: #000;
   font-weight: 300;
   border-radius: 2px;
-  padding: 10px 0;
+  padding: 0;
   height: 0;
   opacity: 0;
+  overflow: hidden;
   @include transform(translateY(20px));
   @include transition(opacity 0.2s, transform 0.2s);
   @include box-shadow(1px 1px 2px rgba(0, 0, 0, 0.3));
@@ -47,6 +48,7 @@
   .is-active & {
     @include transform(translateY(0));
     opacity: 1;
+    overflow: visible;
   }
 }
 
